#613 closed bug (fixed)
[Tracker] doesn't let you to rename system folders
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | |
Keywords: | Cc: | jonas.kirilla | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Tracker doesn't let you to rename system folders.
Attachments (1)
Change History (10)
comment:1 by , 19 years ago
comment:3 by , 18 years ago
Platform: | → All |
---|
AFAIR in BeOS when a modal window shows up, it doesn't "steal" the focus from the current active window. In haiku, it does. What does this mean ? That when the OverrideAlert quits, the tracker window receives the activation message, thus calling WindowActivated() on the TextWidget, which never enters editing mode.
comment:4 by , 17 years ago
Cc: | added |
---|
comment:6 by , 17 years ago
Component: | - Applications → Kits/Interface Kit |
---|
I added a debugger call in TextWidget::StopEdit() and this is the backtrace when I try to rename a system folder (attached).
So looks like I am right, on beos the window doesn't lose the active status when there's a BAlert originating from it.
comment:7 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev23062, but needs review.
comment:8 by , 17 years ago
BTW I should explain what happens here:
BTextWidget::StartEdit() is called, then the OverrideAlert shows up. The B_WINDOW_ACTIVATED message is sent to the ContainerWindow which contains the BTextWidget with "activated" = false. But this message is not handled, since the OverrideAlert is synchronous, and the ContainerWindow is locked. As soon as the user dismiss the alert, the ContainerWindow unlocks and the messages are handled. But that message is already old, it should've been handled before. That's why the BAlert uses UpdateIfNeeded() in a loop. Testing on beos is needed to check which messages are handled.
You mean beyond the alert that comes up and asks you to press shift??