Dispatch also the B_WINDOW_ACTIVATED messages. This fixes bug #613, but we need to check which other messages are handled by beos here.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23062 a95241bf-73f2-0310-859d-f6bbb57e9c96